@@ -104,7 +104,7 @@ ConfigView.dialog.choosedefaultsavepath=Please choose the default save directory
 ConfigView.section.server=Server
 ConfigView.label.overrideip=Override IP address sent to tracker\n - Sometimes needed for NATs
 ConfigView.section.global=General
-ConfigView.label.disconnetseed=Disconnect seeds when seeding
+#ConfigView.label.disconnetseed=Disconnect seeds when seeding
 ConfigView.label.switchpriority=Auto-switch to low-priority when seeding
 ConfigView.label.maxactivetorrents=Max active torrents (0 : unlimited)\n - New torrents won\'t start if you are downloading/seeding more
 ConfigView.label.maxdownloads=Max simultaneous downloads
